--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url: jdbc:mysql://localhost:3307/study
+spring.datasource.username=mysql
+spring.datasource.password=mysql123!
