--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,12 @@ spring.datasource.url: jdbc:mysql://localhost:3307/study
 spring.datasource.username=mysql
 spring.datasource.password=mysql123!
 
+account.admin.id=admin
+account.admin.password=password
+
+jwt.secret=mogakcostudymanagementapplication
+# 토큰 만료 시간 30분(ms 단위)
+jwt.expired.time=1800000
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
