--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.datasource.url: jdbc:mysql://localhost:3307/study
 spring.datasource.username=mysql
 spring.datasource.password=mysql123!
 
+springdoc.api-docs.path=/v1/api-docs
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.configUrl=/v1/api-docs/swagger-config
+springdoc.swagger-ui.url=/v1/api-docs
+
 account.admin.id=admin
 account.admin.password=password
 
