[refactor] Creation of a Common Controller to enhance code maintainability

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,7 @@ jwt.secret=mogakcostudymanagementapplication
 # 토큰 만료 시간 30분(ms 단위)
 jwt.expired.time=1800000
 
+study.systemId=STUDY_0001
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
