--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8090
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -16,7 +17,7 @@ springdoc.swagger-ui.url=/v1/api-docs
 account.admin.id=admin
 account.admin.password=password
 
-jwt.secret=mogakcostudymanagementapplication
+jwt.secret=NwkqmAFTauzXEOiJLxcMRHSbYDthgWCsPre
 # 토큰 만료 시간 30분(ms 단위)
 jwt.expired.time=1800000
 
