[fix] #43 MemberControllerTest create mode bug fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ account.admin.id=admin
 account.admin.password=password
 
 jwt.secret=NwkqmAFTauzXEOiJLxcMRHSbYDthgWCsPre
-# 토큰 만료 시간 30분(ms 단위)
+# 토큰 만료 시간 300분(ms 단위) -> 개발 기간동안은 불편하지 않게 길게 설정함(찬혁)
 jwt.expired.time=18000000
 
 study.systemId=STUDY_0001
