[feat] logout api & test code create

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.url: jdbc:mysql://localhost:3307/study
 spring.datasource.username=mysql
 spring.datasource.password=mysql123!
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
 springdoc.api-docs.path=/v1/api-docs
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.swagger-ui.configUrl=/v1/api-docs/swagger-config
