--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,10 @@ study.systemId=STUDY_0001
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# 이메일로 알림 전송 시 사용할 다연 개인 계정. 추후에 필요시 새 계정 생성 예정 (다연) 
+email.username=wowdayeon@gmail.com
+email.password=itmytkxjlgxfltgu
+
+#스케줄 시작 시간 체크 스케줄링 주기 1분(60초)
+scheduling.interval=60000
