[refactor] Update 'javax.mail' to 'JavaMailSender'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,8 +30,12 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # 이메일로 알림 전송 시 사용할 다연 개인 계정. 추후에 필요시 새 계정 생성 예정 (다연) 
-email.username=wowdayeon@gmail.com
-email.password=itmytkxjlgxfltgu
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wowdayeon@gmail.com
+spring.mail.password=itmytkxjlgxfltgu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 #스케줄 시작 시간 체크 스케줄링 주기 1분(60초)
 scheduling.interval=60000
