--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
