[feat] Add Attendance Statistics

--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -15,10 +15,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
+    "chart.js": "^4.4.1",
     "fullcalendar": "^6.1.10",
     "http-proxy-middleware": "^2.0.6",
     "qs": "^6.11.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
