--- a/build.gradle
+++ b/build.gradle
@@ -47,17 +47,14 @@ tasks.named('test', Test) {
     useJUnitPlatform()
 }
 
-sourceSets {
-    main {
-        resources {
-            srcDirs('../frontend/build/static')
-        }
-    }
+task buildFrontend(type: Exec) {
+    workingDir file('src/main/frontend')
+    commandLine 'npm', 'install'
+    commandLine 'npm', 'run', 'build'
 }
 
-// frontend 모듈의 결과물을 복사하는 태스크 추가
 task copyFrontend(type: Copy) {
-    from '../frontend/build/static'
+    from 'src/main/frontend/build/static'
     into 'src/main/resources/static'
 }
 
@@ -66,3 +63,5 @@ task buildFull {
     dependsOn 'bootJar'
     dependsOn 'copyFrontend'
 }
+// processResources 태스크가 copyFrontend 태스크 결과를 사용할 수 있도록 설정
+processResources.dependsOn copyFrontend
