[refactor] Changed to prevent deletion of viewer account

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #스케줄 시작 시간 체크 스케줄링 주기 1분(60초)
 scheduling.interval=60000
+
+viewer-id=viewer
